--- a/shop.html
+++ b/shop.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Lugx Gaming - Shop Page</title>
+    <title>Console Crusader - Merch Shop</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -51,16 +51,23 @@ https://templatemo.com/tm-589-lugx-gaming
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo.png" alt="" style="width: 158px;">
+                        <img src="assets/images/0d8cb697-2741-44c2-b31d-832bfa4b9721.png" alt="" style="width: 158px;">
                     </a>
+                    <div class="site-title d-none d-md-block" style="margin-left:12px;">
+                      <h1 style="font-family: 'Poppins', sans-serif; font-weight:800; font-size:28px; color:#ffffff; text-transform:uppercase; letter-spacing:2px; margin:0;">
+                        CONSOLE CRUSADER
+                      </h1>
+                    </div>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                       <li><a href="index.html">Home</a></li>
                       <li><a href="shop.html" class="active">Our Shop</a></li>
-                      <li><a href="product-details.html">Product Details</a></li>
                       <li><a href="contact.html">Contact Us</a></li>
-                      <li><a href="#">Sign In</a></li>
+                     <li><a href="index.html#voting">Voting</a></li>
+                     <li><a href="reviews.html">Reviews</a></li>
+                     <li><a href="gallery.html#upload-art">Upload Art</a></li>
+                     <li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart <span id="cart-count-nav" class="badge bg-danger">0</span></a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -73,12 +80,20 @@ https://templatemo.com/tm-589-lugx-gaming
   </header>
   <!-- ***** Header Area End ***** -->
 
-  <div class="page-heading header-text">
+  <div class="main-banner">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12">
-          <h3>Our Shop</h3>
-          <span class="breadcrumb"><a href="#">Home</a> > Our Shop</span>
+        <div class="col-lg-6 align-self-center">
+          <div class="caption header-text">
+            <h6>Our Shop</h6>
+            <h2>Official Merch</h2>
+            <p>Show your support for Console Crusader with our official T-Shirts and Mugs!</p>
+          </div>
+        </div>
+        <div class="col-lg-4 offset-lg-2">
+          <div class="right-image">
+            <img src="assets/images/0d8cb697-2741-44c2-b31d-832bfa4b9721.png" alt="Console Crusader Logo">
+          </div>
         </div>
       </div>
     </div>
@@ -91,182 +106,128 @@ https://templatemo.com/tm-589-lugx-gaming
           <a class="is_active" href="#!" data-filter="*">Show All</a>
         </li>
         <li>
-          <a href="#!" data-filter=".adv">Adventure</a>
+          <a href="#!" data-filter=".tshirt">T-Shirts</a>
         </li>
         <li>
-          <a href="#!" data-filter=".str">Strategy</a>
+          <a href="#!" data-filter=".mug">Mugs</a>
         </li>
         <li>
-          <a href="#!" data-filter=".rac">Racing</a>
+          <a href="#!" data-filter=".hoodie">Hoodies</a>
+        </li>
+        <li>
+          <a href="#!" data-filter=".hat">Hats</a>
+        </li>
+        <li>
+          <a href="#!" data-filter=".pin">Pins</a>
+        </li>
+        <li>
+          <a href="#!" data-filter=".accessory">Accessories</a>
         </li>
       </ul>
-      <div class="row trending-box">
-        <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 adv">
-          <div class="item">
+      <div class="row trending-box justify-content-center" style="--bs-gutter-y: 2.5rem;">
+        <div class="col-lg-3 col-md-6 trending-items tshirt">
+          <div class="item h-100">
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-01.jpg" alt=""></a>
-              <span class="price"><em>$36</em>$24</span>
+              <img src="assets/images/t-shirt.png" alt="Console Crusader T-Shirt">
+              <span class="price">£25.00</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
-              <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
+              <span class="category">T-Shirt</span>
+              <h4>Crusader Logo Tee</h4>
+              <a href="#" class="add-to-cart-btn" data-id="tee-1" data-name="Crusader Logo Tee" data-price="25"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 str">
-          <div class="item">
+        <div class="col-lg-3 col-md-6 trending-items mug">
+          <div class="item h-100">
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-02.jpg" alt=""></a>
-              <span class="price"><em>$32</em>$22</span>
+              <img src="assets/images/mug.png" alt="Console Crusader Mug">
+              <span class="price">£15.00</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
-              <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
+              <span class="category">Mug</span>
+              <h4>Crusader Logo Mug</h4>
+              <a href="#" class="add-to-cart-btn" data-id="mug-1" data-name="Crusader Logo Mug" data-price="15"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 adv rac">
-          <div class="item">
+        <div class="col-lg-3 col-md-6 trending-items hoodie">
+          <div class="item h-100">
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-03.jpg" alt=""></a>
-              <span class="price"><em>$45</em>$30</span>
+              <img src="assets/images/hoodie.png" alt="Console Crusader Hoodie">
+              <span class="price">£40.00</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
-              <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
+              <span class="category">Hoodie</span>
+              <h4>Crusader Logo Hoodie</h4>
+              <a href="#" class="add-to-cart-btn" data-id="hoodie-1" data-name="Crusader Logo Hoodie" data-price="40"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 str">
-          <div class="item">
+        <div class="col-lg-3 col-md-6 trending-items tshirt">
+          <div class="item h-100">
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-04.jpg" alt=""></a>
-              <span class="price"><em>$32</em>$22</span>
+              <img src="assets/images/t shirt 2.png" alt="Pixel Art T-Shirt">
+              <span class="price">£25.00</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
-              <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
+              <span class="category">T-Shirt</span>
+              <h4>Pixel Art Tee</h4>
+              <a href="#" class="add-to-cart-btn" data-id="tee-2" data-name="Pixel Art Tee" data-price="25"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 rac str">
-          <div class="item">
+        <div class="col-lg-3 col-md-6 trending-items hat">
+          <div class="item h-100">
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-03.jpg" alt=""></a>
-              <span class="price"><em>$38</em>$26</span>
+              <img src="assets/images/hat 2.png" alt="Console Crusader Hat">
+              <span class="price">£20.00</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
-              <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
+              <span class="category">Hat</span>
+              <h4>Crusader Logo Hat</h4>
+              <a href="#" class="add-to-cart-btn" data-id="hat-2" data-name="Crusader Logo Hat" data-price="20"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 rac adv">
-          <div class="item">
+        <div class="col-lg-3 col-md-6 trending-items pin">
+          <div class="item h-100">
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-01.jpg" alt=""></a>
-              <span class="price"><em>$30</em>$20</span>
+              <img src="assets/images/lapel pin.png" alt="Console Crusader Lapel Pin">
+              <span class="price">£8.00</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
-              <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
+              <span class="category">Pin</span>
+              <h4>Crusader Lapel Pin</h4>
+              <a href="#" class="add-to-cart-btn" data-id="pin-1" data-name="Crusader Lapel Pin" data-price="8"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 rac str">
-          <div class="item">
+        <div class="col-lg-3 col-md-6 trending-items hoodie">
+          <div class="item h-100">
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-04.jpg" alt=""></a>
-              <span class="price"><em>$32</em>$22</span>
+              <img src="assets/images/black hoodie.png" alt="Black Crusader Hoodie">
+              <span class="price">£45.00</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
-              <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
+              <span class="category">Hoodie</span>
+              <h4>Black Crusader Hoodie</h4>
+              <a href="#" class="add-to-cart-btn" data-id="hoodie-2" data-name="Black Crusader Hoodie" data-price="45"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 rac adv">
-          <div class="item">
+        <div class="col-lg-3 col-md-6 trending-items accessory">
+          <div class="item h-100">
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-02.jpg" alt=""></a>
-              <span class="price"><em>$32</em>$22</span>
+              <img src="assets/images/iphone cover.png" alt="iPhone Cover">
+              <span class="price">£18.00</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
-              <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
+              <span class="category">Accessory</span>
+              <h4>Crusader iPhone Cover</h4>
+              <a href="#" class="add-to-cart-btn" data-id="iphone-1" data-name="Crusader iPhone Cover" data-price="18"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
-        </div>
-        <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 adv rac">
-          <div class="item">
-            <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-03.jpg" alt=""></a>
-              <span class="price"><em>$28</em>$20</span>
-            </div>
-            <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
-              <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 str">
-          <div class="item">
-            <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-04.jpg" alt=""></a>
-              <span class="price"><em>$26</em>$18</span>
-            </div>
-            <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
-              <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 adv">
-          <div class="item">
-            <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-01.jpg" alt=""></a>
-              <span class="price"><em>$32</em>$24</span>
-            </div>
-            <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
-              <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 align-self-center mb-30 trending-items col-md-6 str">
-          <div class="item">
-            <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/trending-02.jpg" alt=""></a>
-              <span class="price"><em>$45</em>$30</span>
-            </div>
-            <div class="down-content">
-              <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
-              <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <ul class="pagination">
-          <li><a href="#"> &lt; </a></li>
-            <li><a href="#">1</a></li>
-            <li><a class="is_active" href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#"> &gt; </a></li>
-          </ul>
         </div>
       </div>
     </div>
@@ -285,9 +246,10 @@ https://templatemo.com/tm-589-lugx-gaming
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/js/isotope.min.js"></script>
+  <script src="assets/js/cart.js"></script>
   <script src="assets/js/owl-carousel.js"></script>
   <script src="assets/js/counter.js"></script>
-  <script src="assets/js/custom.js"></script>
+  <script src="assets/js/custom.js"></script>    
 
   </body>
 </html>
