--- a/contact.html
+++ b/contact.html
@@ -50,17 +50,24 @@ https://templatemo.com/tm-589-lugx-gaming
             <div class="col-12">
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
-                    <a href="index.html" class="logo">
-                        <img src="assets/images/logo.png" alt="" style="width: 158px;">
+                     <a href="index.html" class="logo">
+                        <img src="assets/images/0d8cb697-2741-44c2-b31d-832bfa4b9721.png" alt="" style="width: 158px;">
                     </a>
+                    <div class="site-title d-none d-md-block" style="margin-left:12px;">
+                      <h1 style="font-family: 'Poppins', sans-serif; font-weight:800; font-size:28px; color:#ffffff; text-transform:uppercase; letter-spacing:2px; margin:0;">
+                        CONSOLE CRUSADER
+                      </h1>
+                    </div>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                       <li><a href="index.html">Home</a></li>
                       <li><a href="shop.html">Our Shop</a></li>
-                      <li><a href="product-details.html">Product Details</a></li>
                       <li><a href="contact.html" class="active">Contact Us</a></li>
-                      <li><a href="#">Sign In</a></li>
+                     <li><a href="index.html#voting">Voting</a></li>
+                     <li><a href="reviews.html">Reviews</a></li>
+                     <li><a href="gallery.html#upload-art">Upload Art</a></li>
+                     <li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart <span id="cart-count-nav" class="badge bg-danger">0</span></a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -73,12 +80,19 @@ https://templatemo.com/tm-589-lugx-gaming
   </header>
   <!-- ***** Header Area End ***** -->
 
-  <div class="page-heading header-text">
+  <div class="main-banner">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12">
-          <h3>Contact Us</h3>
-          <span class="breadcrumb"><a href="#">Home</a>  >  Contact Us</span>
+        <div class="col-lg-6 align-self-center">
+          <div class="caption header-text">
+            <h6>Contact Us</h6>
+            <h2>SAY HELLO!</h2>
+          </div>
+        </div>
+        <div class="col-lg-4 offset-lg-2">
+          <div class="right-image">
+            <img src="/assets/images/0d8cb697-2741-44c2-b31d-832bfa4b9721.png" alt="">
+          </div>
         </div>
       </div>
     </div>
@@ -165,9 +179,11 @@ https://templatemo.com/tm-589-lugx-gaming
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/js/isotope.min.js"></script>
+  <script src="assets/js/cart.js"></script>
   <script src="assets/js/owl-carousel.js"></script>
   <script src="assets/js/counter.js"></script>
   <script src="assets/js/custom.js"></script>
+  <script>updateCartCount();</script>
 
   </body>
 </html>
